<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.LoginFragment"
    android:background="@color/purple_100">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/teal_200"
            android:textSize="50dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@drawable/iphone" />

    </LinearLayout>

    <EditText
        android:id="@+id/edFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="210dp"
        android:background="@drawable/radius_25dp"
        android:hint="@string/txt_frist_name"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName"/>
    <EditText
        android:id="@+id/edLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/radius_25dp"
        android:hint="@string/txt_last_name"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName"/>

    <EditText
        android:id="@+id/edUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/radius_25dp"
        android:hint="@string/txt_email"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edFirstName" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        android:layout_marginRight="50dp"
        android:background="@drawable/radius_25dp"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edUser" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/radius_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_register"
        android:textColor="@color/white1"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />


</androidx.constraintlayout.widget.ConstraintLayout>