<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.ProductFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_search"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:textColor="@color/black"/>
                <SearchView
                    android:id="@+id/svSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:padding="10dp"
                    android:id="@+id/txtAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:background="@color/teal_200"
                    android:textColor="@color/black"
                    android:text="All"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:id="@+id/txtProductLaptop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:textColor="@color/black"
                    android:text="@string/txt_laptop"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:id="@+id/txtProductSmartPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:textColor="@color/black"
                    android:text="@string/txt_smartphone"
                    android:gravity="center"/>
                <TextView
                    android:padding="10dp"
                    android:id="@+id/txtProductPart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="13dp"
                    android:textColor="@color/black"
                    android:text="@string/txt_part"
                    android:gravity="center"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_list"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcAllProduct"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>