<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragment.CartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_title"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/with_1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/radius_15dp"
        android:backgroundTint="@color/purple_200"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_total"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="5000$"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtClearCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_btn"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/txt_clear"
            android:textColor="@color/white1"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_20dp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/txt_order"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>