<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.HomeFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="20dp"
                    android:text="@string/app_name"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:auto_cycle="true"
                    app:delay="0"
                    app:period="3000"
                    app:placeholder="@color/black"
                    app:error_image="@color/purple_700"
                    app:corner_radius="20" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txtLaptop"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_laptop"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcLaptop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:nestedScrollingEnabled="false"/>
            <TextView
                android:id="@+id/txtSmartPhone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_smartphone"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcSmartPhone"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>
            <TextView
                android:id="@+id/txtPart"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_part"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcPart"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>