<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:background="@color/white"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:background="@drawable/radius_20dp"
            android:id="@+id/custom_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/acHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_home"
                    android:textSize="11dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/acProduct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/product" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/txt_product"
                    android:textSize="11dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/acCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/shoppingcart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/txt_cart"
                    android:textSize="11dp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/acUser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/txt_user"
                    android:textSize="11dp" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>